[package]
name = "paddle-sys"
version = "0.1.0"
authors = ["LI Rui <lr_cn@outlook.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

description = """
Bindings to Paddle Inference for running deep learning models.
"""
readme = "README.md"
repository = "https://github.com/KernelErr/paddle-sys"

keywords = ["ai", "machine-learning", "deep-learning", "paddlepaddle"]
categories = ["external-ffi-bindings", "science"]

exclude = [
    "Cargo.lock",
    "target/*",
    "paddle_c_api.h"
]

[dependencies]
libloading = "0.6.6"
